fixed padding and banner size and spacing

--- a/css/main.css
+++ b/css/main.css
@@ -380,8 +380,19 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
+.banner {
+  background: #f7021a;
+  width: 100%;
+  color: #e3e5e8;
+  text-align: center;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 .apply-for-it  i {
   font-size: 2em;
   display: flex;
@@ -524,7 +535,7 @@ article .trip-pic {
 
     .content-wrapper {
       max-width: 640px;
-      margin: 100px;
+      margin: 50px;
     }
 
     h1 {
@@ -703,7 +714,6 @@ article .trip-pic {
   p {
     font-size: 1.3em;
   }
-
 
   .thirds {
     width: 45%;
